src/landmark_cpp/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:43:20 **** Incremental Build of configuration Debug for project lankmark_selector ****
make all 
Building file: ../landmark_selector.cpp
Invoking: GCC C++ Compiler
/opt/local/bin/g++-mp-4.8 -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -MMD -MP -MF"landmark_selector.d" -MT"landmark_selector.o" -o "landmark_selector.o" "../landmark_selector.cpp"
../landmark_selector.cpp: In function 'int get_index(std::default_random_engine&, std::unordered_set<int>&)':
../landmark_selector.cpp:16:5: error: no match for 'operator+=' (operand types are 'std::unordered_set<int>::iterator {aka std::__detail::_Node_iterator<int, true, false>}' and 'int')
  it += number;
     ^
make: *** [landmark_selector.o] Error 1
